--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.14",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-env": "^1.16.2",
     "browserslist-config-erb": "^0.0.3",
@@ -173,9 +174,10 @@
     "concurrently": "^6.3.0",
     "core-js": "^3.18.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.3.0",
+    "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.0",
     "detect-port": "^1.3.0",
+    "dotenv-webpack": "^7.0.3",
     "electron": "^15.1.0",
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.2.0",
@@ -215,14 +217,21 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "bootstrap": "^5.1.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
+    "firebase": "^8.10.0",
     "history": "4.x.x",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.3",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.9"
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.9",
+    "styled-components": "^5.3.1"
   },
   "devEngines": {
     "node": ">=14.x",
@@ -250,5 +259,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
